Fixed toast on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -23,6 +23,9 @@ body {
 }
 
 
+.toast { max-width: 85vw; }
+
+
 .container {
     padding: 1.5rem 1rem;
     &.shake {
